@@ -11,7 +11,7 @@ $t->get_ok('/')->status_is(200);
 # comment from https://github.com/hugeinc/flexboxgrid-sass/blob/master/demo/sass/_code.scss
 $t->get_ok($t->tx->res->dom->at('link')->{href})->status_is(200)
   ->header_is('Content-Type', 'text/css')->content_like(qr{font-family:\W*Roboto})
-  ->content_like(qr{\Qurl(../../asset/7520cea9d1/\E.*\.ttf\)});
+  ->content_like(qr{\Qurl(../../asset/\E\w+/.*\.ttf\)});
 
 my $cache_file = File::Spec->catfile(
   qw(t assets cache fonts.googleapis.com css_family_Roboto_400_700));
